--- a/test/fixtures/board_tag_relations.yml
+++ b/test/fixtures/board_tag_relations.yml
@@ -1,23 +1,25 @@
 # == Schema Information
 #
-# Table name: boards
+# Table name: board_tag_relations
 #
 #  id         :integer          not null, primary key
-#  name       :string
-#  title      :string
-#  body       :text
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  board_id   :integer
+#  tag_id     :integer
+#
+# Indexes
+#
+#  index_board_tag_relations_on_board_id  (board_id)
+#  index_board_tag_relations_on_tag_id    (tag_id)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  title: MyString
-  body: MyText
+  board: one
+  tag: one
 
 two:
-  name: MyString
-  title: MyString
-  body: MyText
+  board: two
+  tag: two
