--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -1,11 +1,9 @@
 # == Schema Information
 #
-# Table name: boards
+# Table name: tags
 #
 #  id         :integer          not null, primary key
-#  name       :string
-#  title      :string
-#  body       :text
+#  name       :string           not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #
@@ -14,10 +12,6 @@
 
 one:
   name: MyString
-  title: MyString
-  body: MyText
 
 two:
   name: MyString
-  title: MyString
-  body: MyText
