--- a/test/fixtures/boards.yml
+++ b/test/fixtures/boards.yml
@@ -2,12 +2,13 @@
 #
 # Table name: boards
 #
-#  id         :integer          not null, primary key
-#  name       :string
-#  title      :string
-#  body       :text
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id          :integer          not null, primary key
+#  body        :text
+#  likes_count :integer
+#  name        :string
+#  title       :string
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
